<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012 OlegKrikun

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <!--About-->
    <string name="about">About</string>
    <string name="credits">Credits</string>
    <string name="credit__summary">Many thanks to CrazyCoder for his support and patience</string>
    <string name="credit__cm_summary">Many thanks to CyanogenMod team for great ROM and especially Alexander Hofbauer for supporting HTC Legend</string>
    <string name="credit__pv_summary">Many thanks to Pavel Volkov for testing S2E</string>
    <string name="translators">Translators</string>
    <!--MainScreen-->
    <string name="apps">Applications</string>
    <string name="paid_apps">Paid apps</string>
    <string name="private_apps">Private apps</string>
    <string name="app_data">Application Data</string>
    <string name="caches">Caches</string>
    <string name="dalvik_cache">Dalvik cache</string>
    <string name="download_cache">Download cache</string>
    <string name="location">Location</string>
    <string name="size">Size</string>
    <string name="used">Used</string>
    <string name="free">Free</string>
    <string name="kb">KB</string>
    <string name="mb">MB</string>
    <string name="move">Moving from %1$s to %2$s</string>
    <string name="reboot_required">Reboot is required!</string>
    <string name="refresh">Refresh</string>
    <string name="info">Information</string>
    <string name="myapps">My Apps</string>
    <string name="refreshing">Refreshing…</string>
    <string name="fs_title">FreeSpace not found</string>
    <string name="fs_msg">S2E can show detailed information about partitions usage.\n\nTo do this you need to install\nFreeSpace or FreeSpace Plus.</string>
    <string name="fs_install">Install FreeSpace</string>
    <string name="fs_dont">Don\'t ask more</string>
    <string name="loading">Loading…</string>
    <string name="installing">Installing…</string>
    <string name="checking_api">Checking Android version…</string>
    <string name="checking_root">Checking ROOT…</string>
    <!--Alerts-->
    <string name="alert_script_title">Script not installed</string>
    <string name="alert_root">Root not available or access not given</string>
    <string name="alert_version">This android version not supported</string>
    <!--Settings-->
    <string name="settings">Settings</string>
    <string name="general_options">General options</string>
    <string name="boot_options">Boot options</string>
    <string name="setting_mount">Mount as ext4</string>
    <string name="setting_mount_summary">Mount sd-ext as ext4 without journaling</string>
    <string name="set_read_ahead">Set read buffer</string>
    <string name="set_read_ahead_summary">Set read buffer for SD card</string>
    <string name="read_ahead_values">Buffer size</string>
    <string name="read_ahead_values_symmary">A value of 2MB is the best practice</string>
    <string name="fs_pref">Extended partitions info</string>
    <string name="fs_pref_summary">Launch FreeSpace instead of integrated information</string>
    <string name="setting_themes">Themes</string>
    <string name="setting_themes_summary">Change theme of application</string>
    <string name="setting_themes_summary_toast">Theme changed! Restart application.</string>
    <!--LogViewer-->
    <string name="viewlog">View BootLog</string>
    <string name="lv_title">Last ВootLog</string>
    <string name="lv_share">Share log</string>
    <!--themes-->
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
</resources>
