<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/boot_options">
        <CheckBoxPreference
        android:title="@string/setting_mount"
        android:defaultValue="false"
        android:summary="@string/setting_mount_summary"
        android:key="mounts_ext4"/>
        <CheckBoxPreference
        android:title="@string/set_read_ahead"
        android:defaultValue="false"
        android:summary="@string/set_read_ahead_summary"
        android:key="set_read_ahead"/>
        <ListPreference
        android:title="@string/read_ahead_values"
        android:summary="@string/read_ahead_values_symmary"
        android:dependency="set_read_ahead"
        android:defaultValue="2048"
        android:key="read_ahead_values"
        android:entries="@array/read_ahead"
        android:entryValues="@array/read_ahead_Values"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/import_title">
        <Preference
        android:key="import"
        android:title="@string/import_title"
        android:summary="@string/import_symmary"
        android:enabled="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/general_options">
        <CheckBoxPreference
                android:title="@string/fs_pref"
                android:defaultValue="true"
                android:summary="@string/fs_pref_summary"
                android:key="show_extended_information"/>
    </PreferenceCategory>

</PreferenceScreen>