<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
            android:title="@string/app_name_full"
            android:summary="@string/app_by"
            android:enabled="true"/>
    <PreferenceCategory android:title="@string/credits">
        <Preference
                android:title="CyanogenMod"
                android:summary="@string/credit__cm_summary"
                android:enabled="true"/>
        <Preference
                android:title="CrazyCoder"
                android:summary="@string/credit__summary"
                android:enabled="true"/>
        <Preference
                android:title="Pavel Volkov"
                android:summary="@string/credit__pv_summary"
                android:enabled="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/translators">
        <Preference
                android:title="AntonioPT"
                android:summary="Portuguese"
                android:enabled="true"/>
        <Preference
                android:title="ZercosZ"
                android:summary="Spanish"
                android:enabled="true"/>
        <Preference
                android:title="Dolanor"
                android:summary="French"
                android:enabled="true"/>
    </PreferenceCategory>
</PreferenceScreen>